--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     </section>
   </main>
 
+  <footer>
+    <p>copyright &copy; 2023 | <a href="https://twitter.com/DuruMykael">@DuruMykael</a></p>
+  </footer>
+
   <script src="/script.js"></script>
 </body>
 </html>
